vest-dsl/test/bad/choice_enum_variant_duplicate2.vest
fmt = choose {
  A(u8),
  B(u16),
  B(u16),
}
